--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
             <version>${flink.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-runtime-web_2.11</artifactId>
+            <version>1.11.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
